# Rag_knowledge_assistant

./: .env.example  .gitignore  README.md  main.py  observability.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
apps/web/: app.py
eval/: judge.py  metrics.py  run_eval.py  sample_eval.jsonl
samples/: sports_legends.txt
services/observability/: langfuse_client.py
services/rag/: chunk.py  embed.py  generate.py  index.py  ingest.py  rerank.py  retrieve.py
tests/: test_basic.py
